Stupid exception handling for parsing a line.

--- a/.gitignore
+++ b/.gitignore
@@ -246,3 +246,4 @@ ModelManifest.xml
 WoWChatLog.txt
 /TODO.txt
 /src/LogParser/Properties/launchSettings.json
+/src/LogParser/Resources/WoWLogs.txt
