Changed long if-else to foreach loop

--- a/src/LogParser/Config/config.json
+++ b/src/LogParser/Config/config.json
@@ -2,13 +2,13 @@
   "Regex": {
     "Achievement": "has earned the achievement",
     "CommandOutput": "(^\\d+ - .*)|(^You give .* to .*\\.$)|(^>>)|(^Game Object \\(.*\\) removed$)|(^Appearing at .* location.$)|(^ {4}.*)|(^The command .* uses the following subcommands:$)|(Syntax: \\.)|(^[A-Z].* create(:|s) .*\\.)|(^No items found!$)",
-    "CustomChat": "",
-    "GeneralChat": "",
+    "CustomChat": "^$",
+    "GeneralChat": "^$",
     "GenericChat": "(\\[.\\. .*?\\])|(\\|Hchannel:.*h)",
     "Guild": "Hchannel:GUILD",
-    "Instance": "Hchannel:INSTANCE",
+    "Instance": "Hchannel:INSTANCE_CHAT",
     "Loot": "(^Loot(ing)? .*\\.$)|(^You receive loot: .*\\.$)",
-    "NotDefined": "",
+    "NotDefined": "^$",
     "Officer": "Hchannel:OFFICER",
     "Party": "(Hchannel:PARTY)|(^(Party).*)|(^Dungeon Difficulty set to)|(has invited you to join a group.$)",
     "Raid": "(Hchannel:RAID)|(^((\\[?)|(Legacy )?)Raid)|(joined ((the)|(a)) raid group)",
