Matched new Parser structure. Added test fo Raid type.

--- a/.gitignore
+++ b/.gitignore
@@ -248,3 +248,4 @@ WoWChatLog.txt
 /src/LogParser/Properties/launchSettings.json
 /src/LogParser/Resources/WoWLogs.txt
 /logi_TSa.rar
+/src/LogParser/Resources/LogiTSa.txt
