--- a/LogParserTest/Config/config.json
+++ b/LogParserTest/Config/config.json
@@ -2,16 +2,16 @@
   "Regex": {
     "Achievement": "has earned the achievement",
     "CommandOutput": "(^\\d+ - .*)|(^You give .* to .*\\.$)|(^>>)|(^Game Object \\(.*\\) removed$)|(^Appearing at .* location.$)|(^ {4}.*)|(^The command .* uses the following subcommands:$)|(Syntax: \\.)|(^[A-Z].* create(:|s) .*\\.)|(^No items found!$)",
-    "CustomChat": "",
-    "GeneralChat": "",
+    "CustomChat": "^$",
+    "GeneralChat": "^$",
     "GenericChat": "(\\[.\\. .*?\\])|(\\|Hchannel:.*h)",
-    "Guild": "Hchannel:GUILD",
-    "Instance": "Hchannel:INSTANCE",
-    "Loot": "(^Loot(ing)? .*\\.$)|(^You receive loot: .*\\.$)",
-    "NotDefined": "",
-    "Officer": "Hchannel:OFFICER",
-    "Party": "(Hchannel:PARTY)|(^(Party).*)|(^Dungeon Difficulty set to)|(has invited you to join a group.$)",
-    "Raid": "(Hchannel:RAID)|(^((\\[?)|(Legacy )?)Raid)|(joined ((the)|(a)) raid group)",
+    "Guild": "Hchannel:(?i:GUILD)",
+    "Instance": "Hchannel:(?i:INSTANCE_CHAT)",
+    "Loot": "(^Loot(ing)? .*\\.$)|(^You receive loot: .*\\.$)|(^Your share of the loot is)|(^Greed Roll)|(has selected (Greed|Need) for:)|(^You have selected (Greed|Need) for: )|(^You loot )",
+    "NotDefined": "^$",
+    "Officer": "Hchannel:(?i:OFFICER)",
+    "Party": "(Hchannel:(?i:PARTY))|(^(Party).*)|(^Dungeon Difficulty set to)|(has invited you to join a group.$)|(joins the party.$)|(^You have invited .* to join your group.$)|(^Party converted to Raid$)|( is already in a group.$)",
+    "Raid": "(Hchannel:(?i:RAID))|(^((\\[?)|(Legacy )?)Raid)|((joined|left) ((the)|(a)) raid group)",
     "Roll": ".* rolls \\d* \\(\\d*-\\d*\\)",
     "Say": "says:",
     "System": "(^You have learned)|(^You have gained)|(^You are)|(^Your pet has learned)|(has come online.$)|(.*leveled you up to \\(.*\\))|(^Your skill in.*has increased)|(^You have added.*to your collection\\.)|(has been added to your Toy Box\\.$)|(has been added to your pet journal!$)|(.*is dismissed.)|(^You receive item: .*\\.$)|(^You died.$)|(^You have requested to trade with)|(has gone offline\\.$)",
