--- a/src/LogParser/Config/config.json
+++ b/src/LogParser/Config/config.json
@@ -1,14 +1,14 @@
 {
   "Regex": {
     "Achievement": "has earned the achievement",
-    "CommandOutput": "^$",
-    "CustomChat": "^$",
-    "GeneralChat": "^$",
+    "CommandOutput": "$a",
+    "CustomChat": "$a",
+    "GeneralChat": "$a",
     "GenericChat": "(^\\[\\d*\\. .*\\] )",
     "Guild": "Hchannel:(?i:GUILD)",
     "Instance": "(Hchannel:(?i:INSTANCE_CHAT))|(^[a-zA-Z\\-]* is not in your instance.$)|(^You are now saved to this instance$)|(^[a-zA-Z\\-]* has left the instance group.$)|(^[a-zA-Z\\-]* has joined the (instance group.)|(the battle)$)",
     "Loot": "(^Loot(ing)? .*\\.$)|(^You receive loot: .*\\.$)|(^Your share of the loot is)|(^You loot )|(^[a-zA-Z\\-]* receives loot: .*\\.)",
-    "NotDefined": "^$",
+    "NotDefined": "$a",
     "Officer": "Hchannel:o\\|h\\[(?i:OFFICER)\\]",
     "Party": "(Hchannel:(?i:PARTY))|(^(Party).*)|(^Dungeon Difficulty set to)|(has invited you to join a group.$)|((joins|leaves) the party.$)|(^You have invited .* to join your group.$)|(^Party converted to Raid$)|( is already in a group.$)|(^Your group has been disbanded.$)",
     "Raid": "(Hchannel:(?i:RAID))|(^((\\[?)|(Legacy )?)Raid)|((joined|left) ((the)|(a)) raid group)",
@@ -17,5 +17,19 @@
     "System": "(^You have learned)|(^You have gained)|(^Your pet has learned)|(has come online.$)|(.*leveled you up to \\(.*\\))|(^Your skill in.*has increased)|(^You have added.*to your collection\\.)|(has been added to your Toy Box\\.$)|(has been added to your pet journal!$)|(.*is dismissed.)|(^You receive item: .*\\.$)|(^You died.$)|(^You have requested to trade with)|(has gone offline\\.$)",
     "Whisper": "^(To .*:)|(.*whispers:)",
     "Yell": "yells:"
+  },
+  "Regex_name": {
+    "Whisper": "((?<=To )([^- ]*)(?=.*:))|(^[^- ]*(?=.* whispers: ))",
+    "Raid": "((?<=\\]\\|h )[^- ]*(?=.*:))|(^[^- ]*(?=.*has ))|((?<=Warning\\] )[^- ]*(?=.*: ))",
+    "Party": "(^[^- ]*(?=.*joins ))|(^[^- ]*(?=.*leaves ))|(^[^- ]*(?=.*has invited))|((?<=You have invited )[^- ]*(?=.*to))|((?<=\\]\\|h )[^- ]*(?=.*:))|(^[^- ]*(?=.*is already))",
+    "Say": "^[^- ]*(?=.* says:)",
+    "Yell": "^[^- ]*(?=.* yells:)",
+    "Officer": "(?<=\\]\\|h )[^- ]*(?=.*:)",
+    "Guild": "(?<=\\]\\|h )[^- ]*(?=.*:)",
+    "Loot": "^[^- ]*(?=.*receives)",
+    "Achievement": "^[^- ]*(?=.*has)",
+    "Instance": "(^[^- ]*(?=.*has))|((?<=\\]\\|h )[^- ]*(?=.*:))|(^[^- ]*(?=.* is))",
+    "Roll": "(^[^- ]*(?=.*has))|(^[^- ]*(?=.* won))|((?<=by )[^- ]*(?=-|$))|(^[^- ]*(?=.* rolls))",
+    "GenericChat": "(?<=\\] )[^- ]*(?=.*:|.*joined|.*left)"
   }
 }
