Legit emote parsing

--- a/src/LogParser/Config/config.json
+++ b/src/LogParser/Config/config.json
@@ -19,18 +19,18 @@
     "Yell": "yells:"
   },
   "Regex_name": {
-    "Whisper": "((?<=To )([^- ]*)(?=.*:))|(^[^- ]*(?=.* whispers: ))",
-    "Raid": "((?<=\\]\\|h )[^- ]*(?=.*:))|(^[^- ]*(?=.*has ))|((?<=Warning\\] )[^- ]*(?=.*: ))",
-    "Party": "(^[^- ]*(?=.*joins ))|(^[^- ]*(?=.*leaves ))|(^[^- ]*(?=.*has invited))|((?<=You have invited )[^- ]*(?=.*to))|((?<=\\]\\|h )[^- ]*(?=.*:))|(^[^- ]*(?=.*is already))",
-    "Say": "^[^-]*(?=.* says:)",
-    "Yell": "^[^-]*(?=.* yells:)",
-    "Officer": "(?<=\\]\\|h )[^- ]*(?=.*:)",
-    "Guild": "(?<=\\]\\|h )[^- ]*(?=.*:)",
-    "Loot": "^[^- ]*(?=.*receives)",
-    "Achievement": "^[^- ]*(?=.*has)",
-    "Instance": "(^[^- ]*(?=.*has))|((?<=\\]\\|h )[^- ]*(?=.*:))|(^[^- ]*(?=.* is))",
-    "Roll": "(^[^- ]*(?=.*has))|(^[^- ]*(?=.* won))|((?<=by )[^- ]*(?=-|$))|(^[^- ]*(?=.* rolls))",
-    "GenericChat": "(?<=\\] )[^- ]*(?=.*:|.*joined|.*left)"
+    "Whisper": "((?<=To )([^-: ]*)(?=.*: ))|(^[^-: ]*(?=.* whispers: ))",
+    "Raid": "((?<=\\]\\|h )[^-: ]*(?=.*: ))|(^[^-: ]*(?=.*has ))|((?<=Warning\\] )[^-: ]*(?=.*: ))",
+    "Party": "(^[^-: ]*(?=.*joins ))|(^[^-: ]*(?=.*leaves ))|(^[^-: ]*(?=.*has invited))|((?<=You have invited )[^-: ]*(?=.*to))|((?<=\\]\\|h )[^-: ]*(?=.*: ))|(^[^-: ]*(?=.*is already))",
+    "Say": "^[^-:]*(?=.* says: )",
+    "Yell": "^[^-:]*(?=.* yells: )",
+    "Officer": "(?<=\\]\\|h )[^-: ]*(?=.*: )",
+    "Guild": "(?<=\\]\\|h )[^-: ]*(?=.*: )",
+    "Loot": "^[^-: ]*(?=.*receives)",
+    "Achievement": "^[^-: ]*(?=.*has)",
+    "Instance": "(^[^-: ]*(?=.*has))|((?<=\\]\\|h )[^-: ]*(?=.*: ))|(^[^-: ]*(?=.* is))",
+    "Roll": "(^[^-: ]*(?=.*has))|(^[^-: ]*(?=.* won))|((?<=by )[^-: ]*(?=-|$))|(^[^-: ]*(?=.* rolls))",
+    "GenericChat": "(?<=\\] )[^-: ]*(?=.*: |.*joined|.*left)"
   },
   "Regex_emote": {
     "NotFollowedBy": "^(?!.*has gone offline\\.$|.*has come online\\.$|.*added to friends\\.$|.*removed from friends list\\.$)"
